--- a/25_restrio/templates/third.html
+++ b/25_restrio/templates/third.html
@@ -5,7 +5,10 @@
   
   <body>
 
-    
+    A new deck of cards is shuffled, and five cards are drawn. This is your hand.<br />
+    {% for card in deck %}
+    <img src={{card.image}} />
+    {% endfor %}
     
   </body>
 </html>
