--- a/11_mongoFlask/templates/base.html
+++ b/11_mongoFlask/templates/base.html
@@ -15,7 +15,7 @@
 
 
     <form>
-        <div class="form-group" style="width:20%; float: left;">
+        <div class="form-group" style="width:10%; float: left;">
             <label for="exampleFormControlSelect1">Search Type</label>
             <select class="form-control" id="exampleFormControlSelect1">
                 <option>1</option>
@@ -25,9 +25,9 @@
                 <option>5</option>
             </select>
         </div>
-        <div class="form-group" style="width:70%; float: left;">
+        <div class="form-group" style="width:80%; float: left;">
             <label for="exampleFormControlInput1">Search Query</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Search here">
         </div>
         <div class="form-group" style="width:10%; float: left;">
             <label for="exampleFormControlInput1" style="visibility: hidden;">.</label>
@@ -35,6 +35,10 @@
         </div>
 
     </form>
+
+    <div id="results">
+
+    </div>
 </div>
 
 </body>
