--- a/11_mongoFlask/templates/base.html
+++ b/11_mongoFlask/templates/base.html
@@ -2,42 +2,50 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            crossorigin="anonymous"></script>
 </head>
 
 <body>
-<div style="padding:5%">
+<div style="padding:5%; height: inherit;">
     <div class="heading">
         <h1>Welcome! Search Below</h1>
     </div>
 
+    <div style="height: 5%;">
+        <form>
+            <div class="form-group" style="width:15%; float: left;">
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" style="width:100%" type="button" id="dropdownMenuButton"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Search Type
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="Search Type">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group" style="width:75%; float: left;">
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Search here">
+            </div>
+            <div class="form-group" style="width:10%; float: left;">
+                <button class="btn btn-primary" type="submit" action="/" style="height:100%;width:100%">Search</button>
+            </div>
 
-    <form>
-        <div class="form-group" style="width:10%; float: left;">
-            <label for="exampleFormControlSelect1">Search Type</label>
-            <select class="form-control" id="exampleFormControlSelect1">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
-            </select>
-        </div>
-        <div class="form-group" style="width:80%; float: left;">
-            <label for="exampleFormControlInput1">Search Query</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Search here">
-        </div>
-        <div class="form-group" style="width:10%; float: left;">
-            <label for="exampleFormControlInput1" style="visibility: hidden;">.</label>
-            <button class="btn btn-primary" type="submit" action="/" style="height:100%;width:100%">Search</button>
-        </div>
-
-    </form>
+        </form>
+    </div>
 
     <div id="results">
-
+        a
     </div>
 </div>
 
